# artwall-flask

./: .env.example  .firebaserc  .flake8  .gitignore  Artwall Application Vision.md  Dockerfile  Flask Artwall_ Python Firebase Migration.rtf  GIT_HOOKS_README.md  GRADIENT_IMPLEMENTATION.md  README.md  check_database.py  check_dates.py  config.py  database.rules.json  inspect_coherence.py  inspect_db.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  sanity_check.sh  sanity_firebase_check.py  test_year_grouping.py  version.py  wsgi.py
.husky/: pre-commit
app/: __init__.py  extensions.py  template_filters.py
app/blueprints/: __init__.py  auth.py
app/forms/: __init__.py  project_forms.py
app/models/: __init__.py  project.py  user.py
app/templates/: base.html  (+2 more)
docs/: Diagnostic Analysis of Rendering Anomalies in Flask-Masonry Architectures.txt  GRADIENT_SYSTEM.md  card-sizing-and-responsive-layout.md  card_content.txt  gradient-generation-guide.md  header-icons-and-dropdowns.md  project_review_gemini3_20251125-2130.txt  themes-in-jsnext-app.ts
scripts/: debug_image_access.py  debug_proxy_path.py  inspect_db.py  list_firebase_subcategories.py  migrate_artwall_to_posts.py
tests/: README.md  test_auth_implementation.py  test_clean_content.py  test_database_loading.py  test_decorators.py  test_deployment.py  test_extensions.py  test_firebase_connection.py  test_gradient_generator.py  test_gradients.py  test_layout_alignment.py  test_modal_fields.py  test_pagination.py  test_post_helpers.py  test_template_filters.py  test_year_grouping.py
(+34 files in other folders)
