[tool.poetry]
name = "flask-firebase-migration"
version = "1.0.0"
description = "Migration of Next.js app to Flask"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.0"
werkzeug = "^2.3.0"
firebase-admin = "^6.1.0"
flask-wtf = "^1.1.1"
wtforms = "^3.0.0"
flask-login = "^0.6.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0"
bleach = "^6.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0" # Code formatter
flake8 = "^6.0.0" # Linter

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"